# approxmc

./: .gitignore  .gitmodules  AUTHORS  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  approxmcConfig.cmake.in  flake.nix  pyproject.toml  setup.cfg  setup.py  sparseval.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  cmake.yml  codeql-analysis.yml  newpython.yml  python-binary-packages.yml  python-package-build.yml  python-tarball-build.yml  python-wheel-build.yml  python-wheels.yml  release.yml
approx/: INSTALL  Makefile.am  ProbMapFile_36.txt  ProbMapFile_40.txt  configure.in
approx/cmsat/: Alg.h  BitArray.h  BothCache.cpp  BothCache.h  BoundedQueue.h  CSet.h  Clause.h  ClauseAllocator.cpp  ClauseAllocator.h  ClauseCleaner.cpp  ClauseCleaner.h  ClauseOffset.h  ClauseVivifier.cpp  ClauseVivifier.h  CompleteDetachReattacher.cpp  CompleteDetachReattacher.h  DataSync.cpp  DataSync.h  DimacsParser.cpp  DimacsParser.h  DoublePackedRow.h  FailedLitSearcher.cpp  FailedLitSearcher.h  FindUndef.cpp  FindUndef.h  Gaussian.cpp  Gaussian.h  GaussianConfig.h  Heap.h  Main.cpp  Main.h  Makefile.am  MatrixFinder.cpp  MatrixFinder.h  MersenneTwister.h  OnlyNonLearntBins.cpp  OnlyNonLearntBins.h  PackedMatrix.h  PackedRow.cpp  PackedRow.h  (+33 more)
approx/cmsat/msvc/: stdint.h
approx/man/: Makefile.am
cmake/: FindGMP.cmake  FindMPFR.cmake  approxmcConfig-buildtree.cmake.in
html/: index.html  rsync.sh
python/: Makefile  README.md  setup.py
python/src/: GitSHA1.cpp  pyapproxmc.cpp
python/tests/: test.py  test_1.cnf  test_pyapproxmc.py
scripts/: build_emscripten.sh  build_norm.sh  build_sanitize.sh  build_static.sh  build_static_release.sh
scripts/build_scripts/: build_emscripten.sh  build_norm.sh  build_static.sh  build_static_release.sh
scripts/cluster/: create_solvetime_old.sh  create_solvetimes.sh  solved_with_options_sat2019.sh  solvetimes_from_output.sh  solvetimes_from_output_old.sh  times.sh
scripts/cluster_scripts/: solvetimes_from_output.sh  solvetimes_from_output_appmc2.sh
scripts/mccomp/: mccomp2021-exampe-mc.cnf  mccomp2021_converter.sh
src/: CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.h  appmc_constants.cpp  appmc_constants.h  appmcconfig.h  approxmc.cpp  approxmc.h  approxmc.h.in  approxmcconfig.h  config.h  constants.cpp  constants.h  counter.cpp  counter.h  main.cpp  main_min.cpp  scalmc.cpp  scalmc.h  scalmcconfig.h  time_mem.h
tests/: CMakeLists.txt  simpletest.cpp  test_helper.h
utils/build_scripts/: build_empscripten.sh  build_sanitize.sh
utils/cluster_scripts/: solved_with_options.sh
utils/mccomp/: mccomp2021-exampe-pmc.cnf  mccomp2021_converter.sh
